--- a/pom.xml
+++ b/pom.xml
@@ -64,8 +64,11 @@
           <version>1.2.1</version>
           <scope>compile</scope>
       </dependency>
-
-  </dependencies>
+      <dependency>
+          <groupId>javax.servlet</groupId>
+          <artifactId>jstl</artifactId>
+          <version>1.2</version>
+      </dependency></dependencies>
   <build>
       <plugins>
           <plugin>
