--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,10 @@
   <artifactId>test01</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>test01 Maven Webapp</name>
+    <properties>
+        <spring-security-web.version>4.2.1.BUILD-SNAPSHOT</spring-security-web.version>
+    </properties>
+    <name>test01 Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -29,17 +32,17 @@
           <dependency>
               <groupId>org.springframework.security</groupId>
               <artifactId>spring-security-web</artifactId>
-              <version>4.1.0.RC2</version>
+              <version>${spring-security-web.version}</version>
           </dependency>
           <dependency>
               <groupId>org.springframework.security</groupId>
               <artifactId>spring-security-config</artifactId>
-              <version>4.1.0.RC2</version>
+              <version>${spring-security-web.version}</version>
           </dependency>
       <dependency>
           <groupId>org.springframework.security</groupId>
           <artifactId>spring-security-core</artifactId>
-          <version>4.1.0.RC2</version>
+          <version>${spring-security-web.version}</version>
       </dependency>
       <dependency>
           <groupId>org.springframework</groupId>
@@ -98,13 +101,21 @@
             <name>Spring Milestone Repository</name>
             <url>http://repo.spring.io/milestone</url>
         </repository>
+        <repository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/libs-milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
     </repositories>
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-framework-bom</artifactId>
-        <version>4.2.5.RELEASE</version>
+        <version>5.0.0.M2</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
