--- a/pom.xml
+++ b/pom.xml
@@ -6,17 +6,27 @@
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
     <properties>
-        <spring-security-web.version>4.2.1.BUILD-SNAPSHOT</spring-security-web.version>
+        <spring-security.version>4.2.1.BUILD-SNAPSHOT</spring-security.version>
     </properties>
     <name>test01 Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+      <dependency>
+          <groupId>commons-dbcp</groupId>
+          <artifactId>commons-dbcp</artifactId>
+          <version>1.2.2</version>
+      </dependency>
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>5.1.35</version>
+      </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.12</version>
+          <scope>test</scope>
+      </dependency>
       <dependency>
           <groupId>javax.servlet.jsp</groupId>
           <artifactId>jsp-api</artifactId>
@@ -32,17 +42,22 @@
           <dependency>
               <groupId>org.springframework.security</groupId>
               <artifactId>spring-security-web</artifactId>
-              <version>${spring-security-web.version}</version>
+              <version>${spring-security.version}</version>
           </dependency>
           <dependency>
               <groupId>org.springframework.security</groupId>
               <artifactId>spring-security-config</artifactId>
-              <version>${spring-security-web.version}</version>
+              <version>${spring-security.version}</version>
           </dependency>
       <dependency>
           <groupId>org.springframework.security</groupId>
           <artifactId>spring-security-core</artifactId>
-          <version>${spring-security-web.version}</version>
+          <version>${spring-security.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework.security</groupId>
+          <artifactId>spring-security-test</artifactId>
+          <version>${spring-security.version}</version>
       </dependency>
       <dependency>
           <groupId>org.springframework</groupId>
