--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
     <properties>
-        <spring-security.version>4.2.1.BUILD-SNAPSHOT</spring-security.version>
+        <spring-security.version>5.3.3.RELEASE</spring-security.version>
     </properties>
     <name>test01 Maven Webapp</name>
   <url>http://maven.apache.org</url>
@@ -130,7 +130,7 @@
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-framework-bom</artifactId>
-        <version>5.0.0.M2</version>
+        <version>5.3.3</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
